# ocaml-syntax-extension

./: .gitignore  README.md  dune-project  main.ml  ocamlext.opam
.github/workflows/: ci.yml
caml_dynamic/: caml_dynamic_qobj.ml  dune
caml_dynamic/stubs/: CamlDynamicQObj.cpp  CamlDynamicQObj.h  dynamicqobject.cpp  dynamicqobject.h
config/: discover.ml  dune
demo/: demo.ml  dune
lib/: dune
ocamlext/ocamlext/: qmltest.qml
ocamlext/ocamlext/demo/: demo.ml
test/: dune
tests/: dune  test1.ml  test2.ml  test3.ml  test3.qml  test4.ml  test4.qml  test5.ml
