(copy_files %{workspace_root}/caml_dynamic/stubs/*.cpp)

(copy_files %{workspace_root}/caml_dynamic/stubs/*.h)

(env
 (_
  (flags
   (-rectypes -warn-error -A -w -K-9-27)))
 ;  (release
 ;   (flags
 ;    (:standard -rectypes -warn-error -A -w -K-9-27))
 ;   (ocamlopt_flags -O3))
 )

(library
 (name caml_dynamic)
 (modules Caml_dynamic_qobj)
 (libraries lablqml)
 (foreign_stubs
  (language cxx)
  (names moc_CamlDynamicQObj CamlDynamicQObj dynamicqobject)
  (flags
   ((:include %{workspace_root}/config/c_flags.sexp)
    -Wall
    -std=c++11
    -O3
    -I
    .
    -Dprivate=public
    -fPIC)))
 (ocamlopt_flags (-rectypes))
 (c_library_flags
  (:include %{workspace_root}/config/c_library_flags.sexp)))

(rule
 (targets moc_CamlDynamicQObj.cpp)
 (deps CamlDynamicQObj.h)
 (action
  (run %{read:../config/moc.sexp} %{deps} -o %{targets})))

; (alias
;  (name default)
;  (deps
;   %{project_root}/config/moc.sexp
;   libcaml_dynamic_stubs.a
;   caml_dynamic.cmxa))
